[package]
name = "unused-pkg"
version = "0.1.0"
edition = "2021"
authors = ["Johan Montorfano <me@johanmontorfano.com>"]
license = "MIT"
description = "A tool to check for unused and outdated packages in a Rust/Node project."
readme = "README.md"
homepage = "https://github.com/johanmontorfano/unused-pkg"
repository = "https://github.com/johanmontorfano/unused-pkg"
keywords = ["cli", "packages", "check", "project"]
categories = ["command-line-utilities"]

[dependencies]
cargo_toml = "0.20.2"
crates_io_api = "0.11.0"
package_json_schema = "0.2.1"
reqwest = "0.12.4"
semver = "1.0.23"
serde = "1.0.202"
serde_derive = "1.0.202"
walkdir = "2.5.0"
